--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.5",
     "antd": "^4.21.3",
+    "emotion": "^11.0.0",
+    "is-hotkey": "^0.2.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "slate": "^0.84.0",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.83.2"
   },
   "devDependencies": {
     "@antv/s2": "1.24.0",
